// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartBulletTitle 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="140"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 140"
      width="450"
    />
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="140"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChartBulletTitle 2`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="140"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 140"
      width="450"
    />
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="140"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders component data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-chart"
    style="pointer-events: none; position: relative; width: 100%; height: 100%;"
  >
    <svg
      height="140"
      role="img"
      style="pointer-events: all; width: 100%; height: 100%;"
      viewBox="0 0 450 140"
      width="450"
    >
      <text
        direction="inherit"
        dx="0"
        id="test2"
        x="36"
        y="70.1"
      >
        <tspan
          dx="0"
          dy="0"
          style="fill: var(--pf-v6-chart-bullet--label--title--Fill, #1f1f1f); font-size: 18px; text-anchor: end; font-family: var(--pf-v6-chart-global--FontFamily, "Red Hat Text VF"); letter-spacing: var(--pf-v6-chart-global--letter-spacing, normal); stroke: transparent;"
          text-anchor="end"
          x="36"
        >
          Text label
        </tspan>
        <tspan
          dx="0"
          dy="13.8"
          style="fill: var(--pf-v6-chart-bullet--label--subtitle--Fill, #a3a3a3); font-size: 14px; text-anchor: end; font-family: var(--pf-v6-chart-global--FontFamily, "Red Hat Text VF"); letter-spacing: var(--pf-v6-chart-global--letter-spacing, normal); stroke: transparent;"
          text-anchor="end"
          x="36"
        >
          Measure details
        </tspan>
      </text>
    </svg>
    <div
      style="z-index: 99; position: absolute; top: 0px; left: 0px; width: 100%; height: 100%;"
    >
      <svg
        height="140"
        style="overflow: visible; width: 100%; height: 100%;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;
